terraform/common/dev_vpc_without_module/subnet.tf
resource "aws_subnet" "public_1a" {
  vpc_id            = aws_vpc.dev.id
  availability_zone = "ap-northeast-1a"
  cidr_block        = "172.16.1.0/24"

  tags = {
    Name = "public-1a"
  }
}

resource "aws_subnet" "private_1a" {
  vpc_id            = aws_vpc.dev.id
  availability_zone = "ap-northeast-1a"
  cidr_block        = "172.16.101.0/24"

  tags = {
    Name = "private-1a"
  }
}

resource "aws_subnet" "public_1c" {
  vpc_id            = aws_vpc.dev.id
  availability_zone = "ap-northeast-1c"
  cidr_block        = "172.16.2.0/24"

  tags = {
    Name = "public-1c"
  }
}

resource "aws_subnet" "private_1c" {
  vpc_id            = aws_vpc.dev.id
  availability_zone = "ap-northeast-1c"
  cidr_block        = "172.16.102.0/24"

  tags = {
    Name = "private-1c"
  }
}
